[package]
name = "nsq-strategies-rs"
version = "0.1.0"
edition = "2021"
authors = ["x2x4com <x2x4com@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde_json = "1.0.105"
tokio = { version = "1.34", features = ["full"] }
tokio-nsq = "0.14.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
